--- a/Mirror/AndroidManifest.xml
+++ b/Mirror/AndroidManifest.xml
@@ -3,12 +3,12 @@
     package="com.mamlambo.mirror"
     android:versionCode="1"
     android:versionName="1.0" >
-
     <uses-sdk android:minSdkVersion="14" />
-
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
@@ -17,10 +17,8 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
