--- a/FallingSnow/.project
+++ b/FallingSnow/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>FallingSnow</name>
+	<name>FallingSnow-WP</name>
 	<comment></comment>
 	<projects>
 	</projects>
